# Lung-Cancer-E2E

./: EDA.ipynb  Initial_EDA.ipynb  Template.py  app.py  main.py  pyproject.toml  requirements.txt  setup.py  webapp.py
artifacts/: preprocessor.pkl  raw.csv.dvc  test.csv
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
notebook/: EDA.ipynb  Model_training.ipynb
notebook/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
src/LungCancerDetection/: exception.py  logger.py  utils.py
src/LungCancerDetection/components/: Survival_model_trainer.py  data_ingestion.py  data_transformation.py  model_trainer.py
