[project]
name = "lung-cancer-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "cookiecutter>=2.6.0",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.7.5",
    "pandas>=2.0.3",
    "pandas-profiling>=3.0.0",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
]
