[project]
name = "lung-cancer-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "catboost>=1.2.8",
    "cookiecutter>=2.6.0",
    "dvc>=3.42.0",
    "imblearn>=0.0",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.7.5",
    "pandas>=2.0.3",
    "pandas-profiling>=3.0.0",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
    "setuptools>=75.3.2",
    "streamlit>=1.40.1",
    "xgboost>=2.1.4",
]
